[package]
name = "efi-bank"
version = "0.1.5"
edition = "2024"
description = "A SDK for interacting with the EFI Bank."
license = "MIT"
repository = "https://github.com/wuzi/efi-bank"
readme = "README.md"
keywords = ["sdk", "payments", "efi"]
categories = ["network-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "native-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
